# website

./: .env.example.toml  .gitignore  Cargo.toml  Conic.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: audit.yml  lint.yml  test.yml
migrations/: 2_download_logs.sql  3_releases.sql  4_artifacts.sql
public/assets/: download.css  global.css  guide.css  main.css  navbar.css
src/: main.rs  pages.rs  routes.rs
src/controllers/: download.rs  home.rs  mod.rs
src/models/: mod.rs
src/tasks/: mod.rs  website_update.rs
templates/: download.html  guide.html.hbs  home.html  market.html.hbs  navbar.html.hbs
