[package]
name = "amethyst_launcher_website"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
anyhow = "1.0.93"
once_cell = "1.20.2"
serde = { version = "1.0.215", features = ['derive'] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ['full'] }
toml = "0.8.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
askama = { version = "0.12", features = [
  "with-axum",
  "mime",
  "mime_guess",
  "markdown",
] }
askama_axum = "0.4.0"
reqwest = { version = "0.12.9", features = ["json"] }
sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
  "postgres",
] }
